# agid-accessibilita-kit

./: .gitignore  LICENSE  README.md  package.json
docs/: sostieni-il-progetto.md
python-app/: .gitignore  README.md  pyproject.toml
python-app/agid_accessibilita_kit/: __init__.py  cli.py  export.py  gui.py  service.py  templates.py
src/: cli.js  templates.js
tests/: run.js
